Grammars/LedgerGrammar.peg

Grammar Ledger
LedgerCall <- "Ledger" Sep Options* / "Ledger" EOS #Command? Arguments? 
Options <- File (Sep / EOS) / Sort (Sep / EOS) / PriceDb (Sep / EOS )
File <- FileFlag Sep FilePath
FileFlag <- "--file" / "-f"
Sort <- SortFlag Sep SortCriteria
SortFlag <- "--sort" / "-S"
SortCriteria <- "d" / "a"
PriceDb <- PriceDbFlag Sep FilePath
PriceDbFlag <- "--price-db"
FilePath <- .* 
Sep <- " "+ 
EOS <- !.
